kubernetes/apps/apps/gatus/gatus/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatus
  labels:
    app: gatus
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: gatus
  template:
    metadata:
      labels:
        app: gatus
    spec:
      containers:
      - name: gatus
        image: harbor.cloud.traunseenet.com/ghcr.io/twin/gatus:v5.37.0@sha256:094eb186e55235db367e90e9d56140e5897b7044c41de23cde4cc18e6da1242e
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
        volumeMounts:
        - name: gatus-config-volume
          mountPath: /config/config.yaml
          subPath: config.yaml
        - name: data
          mountPath: "/etc/gatus"
      volumes:
      - name: gatus-config-volume
        configMap:
          name: gatus-config
      - name: data
        persistentVolumeClaim:
          claimName: gatus-db
