kubernetes/apps/apps/gatus/gatus/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gatus
spec:
  type: ClusterIP
  selector:
    app: gatus
  ports:
    - port: 8080
      name: http-tcp
      targetPort: 8080
      protocol: TCP
