kubernetes/apps/apps/gatus/gatus/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gatus
spec:
  parentRefs:
    - name: traefik
      namespace: networking
      sectionName: websecure-cloud
  hostnames:
    - gatus.cloud.traunseenet.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: gatus
          port: 8080
