kubernetes/apps/apps/gatus/gatus/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gatus
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - gatus.cloud.traunseenet.com
      secretName: gatus-cert
  ingressClassName: traefik
  rules:
    - host: gatus.cloud.traunseenet.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gatus
                port:
                  name: http-tcp
